# Algorithms

./: CMakeLists.txt  README.md
Containers/: CMakeLists.txt  README.md
Containers/include/: constants.hpp
Containers/include/dynamic_array/: dynamic_array.hpp
Containers/include/linked_list/: linked_list.hpp
Containers/src/: CMakeLists.txt  main.cpp
Containers/src/dynamic_array/: CMakeLists.txt
Containers/src/linked_list/: CMakeLists.txt  linked_list.cpp
Containers/tests/: CMakeLists.txt
Containers/tests/dynamic_array/: CMakeLists.txt  DynamicArrayTest.cpp
Containers/tests/linked_list/: CMakeLists.txt  LinkedListTest.cpp
MemoryManagement/: CMakeLists.txt  README.md
MemoryManagement/include/: constants.hpp
MemoryManagement/include/memory_allocator/: CoalesceAllocator.hpp  FSA.hpp  MemoryAllocator.hpp
Quicksort/: CMakeLists.txt  README.md  SortingsTime.xlsx
Quicksort/include/: constants.hpp
Quicksort/include/sorter/: sorter.hpp  time_meter.hpp
Quicksort/src/: CMakeLists.txt  main.cpp
Quicksort/src/sorter/: CMakeLists.txt  sorter.cpp  time_meter.cpp
Quicksort/tests/: CMakeLists.txt
Quicksort/tests/sorter/: CMakeLists.txt  SorterTest.cpp
Search/: CMakeLists.txt  README.md
Search/include/: constants.hpp
Search/include/dictionary/: Dictionary.hpp
Search/src/: CMakeLists.txt  main.cpp
Search/src/dictionary/: CMakeLists.txt
Search/tests/: CMakeLists.txt
Search/tests/dictionary/: CMakeLists.txt  DictionaryTest.cpp
